--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,8 @@
               <h3 class="panel-title">Question Answering System</h3>
           </div>
           <div class="panel-body">
-            <p>The goal of this project is to build a question answering system that performs textual reasoning to answer and pass a 4th grade science exam.</p>
+            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/qa_img.png" />
+            <p>The goal of this project is to build a question answering system that uses alignment over semantic roles to answer and pass a 4th grade science exam.</p>
             <p>The baseline solution uses word overlap between question and answer sentences to predict the probable anaswer. The scoring is done by dividing number of common tokens between question and answer sentences with number of tokens in the question sentence. This system answered 48% of the questions.</p>
             <p>
               <ol>
@@ -106,6 +107,7 @@
               <h3 class="panel-title">Predicting the Super Bowl and College Football Champions of 2015</h3>
           </div>
           <div class="panel-body">
+            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/superbowl_img.png" />
             <p>The goal of this project is to build machine learning models to predict the winners of 2015 Super Bowl and the College Football Championship using historical data.</p>
             <p>We have predicted the outcome of football matches entirely using the knowledge of previous game statistics. We have used three different models to do this:</p>
             <ol>
@@ -125,6 +127,7 @@
               <h3 class="panel-title">Predicting Yelp review rating stars from review text</h3>
           </div>
           <div class="panel-body">
+            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/lda_img.png" />
             <p>The goal of this project is to predict reviews' star ratings on Yelp from review text.</p>
             <p>We have built the following models that perform text analysis on review data to predict the rating stars.</p>
             <ol>
@@ -146,6 +149,7 @@
               <h3 class="panel-title">Predicting facial beauty using Convolutional Neural Network (CNN)</h3>
           </div>
           <div class="panel-body">
+            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/cnn_img.png" />
             <p>Aim of this project is, for every image with a face of a human, rate the beauty of the face, using a Convolutional Neural Network (CNN). This is done without considering any landmark features. Thus, detecting the features, training them, as well as testing would be done using CNN.</p>
             <p>We configured a deep learning CNN using <a href="http://caffe.berkeleyvision.org/" target="_blank">Caffe</a> (a fast framework for deep learning) and trained it to classify faces into one of the 5 classes based on facial beauty.</p>
             <p>The trained model predicts facial beauty with an accuracy of 50.32%.</p>
@@ -158,6 +162,7 @@
               <h3 class="panel-title">tMood</h3>
           </div>
           <div class="panel-body">
+            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/tmood_img.png" />
             <p>This project is developed during <a href="http://bitca.mp/" target="_blank">Bitcamp Hackathon</a>.</p>
             <p>A Pebble app that analyses the sentiment of people around you using twitter feeds at your location. Backend for this project is developed in Python and hosted in <a href="http://pythonanywhere.com" target="_blank">pythonanywhere.com</a> with Frontend developed in JavaScript.</p>
             <ul>
