--- a/projects.html
+++ b/projects.html
@@ -171,7 +171,7 @@
               <li>We use sentiment classifier by IBM Alchemy to get the tweet sentiments.</li>
               <li>Then we randomly select 16 tweets along with their sentiments and return it in JSON format.</li>
               <li>It is then used to display 16 smileys on the screen of the watch depending on the sentiment of the tweet.</li>
-              <li>On clicking the smiley you can view the complete tweet and also you can shake your watch to view random tweet and ots sentiment</li>
+              <li>On clicking the smiley you can view the complete tweet and also you can shake your watch to view random tweet and its sentiment</li>
             </ul>
 
             <a class="btn mybtn-primary btn-xs" target="_blank" href="https://github.com/chetannaik/tMood">Code</a>
