--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
-    
+
     <!-- My CSS -->
     <link href="defaultstyles.css" rel="stylesheet" media="screen">
 
@@ -77,7 +77,7 @@
               <li><a href="projects.html">Projects</a></li>
               <li><a href="misc.html">Misc</a></li>
               <li><a href="contact.html">Contact</a></li>
-            </ul>            
+            </ul>
           </div>
         </div>
       </nav>
@@ -93,6 +93,7 @@
           <li>Data Science</li>
           <li>Algorithms</li>
         </ul>
+        <p>Here is my <a href="files/chetannaik_resume.pdf" target="_blank">CV</a>.</p>
       </div> <!-- content -->
 
     </div> <!-- /container -->
