--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
               <h3 class="panel-title">Predicting Yelp review rating stars from review text</h3>
           </div>
           <div class="panel-body">
-            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/lda_img.png" />
+            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/lda_img.svg" />
             <p>The goal of this project is to predict reviews' star ratings on Yelp from review text.</p>
             <p>We have built the following models that perform text analysis on review data to predict the rating stars.</p>
             <ol>
