CV project code link added

--- a/projects.html
+++ b/projects.html
@@ -153,7 +153,7 @@
             <p>Aim of this project is, for every image with a face of a human, rate the beauty of the face, using a Convolutional Neural Network (CNN). This is done without considering any landmark features. Thus, detecting the features, training them, as well as testing would be done using CNN.</p>
             <p>We configured a deep learning CNN using <a href="http://caffe.berkeleyvision.org/" target="_blank">Caffe</a> (a fast framework for deep learning) and trained it to classify faces into one of the 5 classes based on facial beauty.</p>
             <p>The trained model predicts facial beauty with an accuracy of 50.32%.</p>
-            <a class="btn mybtn-primary btn-xs" target="_blank" href="files/computer_vision_report.pdf">Report</a>  <a class="btn mybtn-primary btn-xs" href="https://docs.google.com/presentation/d/1ibiqRUbZvzrjclYVhk8ex1iTKwjXa7YMN1sOvVFZFm8/embed?start=false&loop=false&delayms=3000" target="_blank">Presentation</a>
+            <a class="btn mybtn-primary btn-xs" target="_blank" href="https://github.com/chetannaik/cnn-for-facial-beauty-detection">Code</a>  <a class="btn mybtn-primary btn-xs" target="_blank" href="files/computer_vision_report.pdf">Report</a>  <a class="btn mybtn-primary btn-xs" href="https://docs.google.com/presentation/d/1ibiqRUbZvzrjclYVhk8ex1iTKwjXa7YMN1sOvVFZFm8/embed?start=false&loop=false&delayms=3000" target="_blank">Presentation</a>
           </div>
       </div>
 
