--- a/research.html
+++ b/research.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
-    
+
     <!-- My CSS -->
     <link href="defaultstyles.css" rel="stylesheet" media="screen">
 
@@ -47,7 +47,7 @@
             </div>
             <div class="svgico">
               <a href="https://github.com/chetannaik" target="_blank"><img src="files/git.png" height="26px"></a>
-            </div>            
+            </div>
             <div class="svgico">
               <a href="https://plus.google.com/+ChetanNaikN/posts" target="_blank"><img src="files/gplus.png" height="26px"></a>
             </div>
@@ -77,7 +77,7 @@
               <li><a href="projects.html">Projects</a></li>
               <li><a href="misc.html">Misc</a></li>
               <li><a href="contact.html">Contact</a></li>
-            </ul>            
+            </ul>
           </div>
         </div>
       </nav>
@@ -87,7 +87,7 @@
               <h3 class="panel-title">Process Representations for Question Answering</h3>
           </div>
           <div class="panel-body">
-            <p>As part of the <a target="_blank" href="http://allenai.org/aristo.html">AI2 Project Aristo</a>, we are developing a question answering system that can recognize instances of processes. We are designing a system that can automatically identify the key semantic roles and use them in an alignment framework to answer questions. Project involves extending state-of-the-art techniques in NLP and Machine learning.</p>        
+            <p>As part of the <a target="_blank" href="http://allenai.org/aristo.html">AI2 Project Aristo</a>, we are developing a question answering system that can recognize instances of processes. We are designing a system that can automatically identify the key semantic roles and use them in an alignment framework to answer questions. Project involves extending state-of-the-art techniques in NLP and Machine learning.</p>
             <p>More information will be available soon on this page.</p>
           </div>
       </div>
@@ -98,9 +98,10 @@
               <h3 class="panel-title">Publications</h3>
           </div>
           <div class="panel-body">
-              <a href="http://www.isi.edu/ikcap/sciknow2015/papers/Louvan.pdf">Semantic Role Labeling for Process Recognition Questions</a> <span class="badge">2015</span><br>
+              <a>Semantic Role Labeling for Process Recognition Questions</a> <span class="badge">2015</span><br>
               Samuel Louvan, Chetan Naik, Veronica Lynn, Ankit Arun, Niranjan Balasubramanian, and Peter Clark<br>
-              <em>K-CAP Scientific Knowledge Workshop 2015.</em>
+              <em>K-CAP Scientific Knowledge Workshop 2015.</em><br>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="http://www.isi.edu/ikcap/sciknow2015/papers/Louvan.pdf">PDF</a>  <a class="btn mybtn-primary btn-xs" target="_blank" href="files/poster.pdf">Poster</a>
           </div>
       </div>
 
