adding new pic & updated cv + minor edits

--- a/misc.html
+++ b/misc.html
@@ -77,7 +77,7 @@
               <li><a href="projects.html">Projects</a></li>
               <li class="active"><a href="misc.html">Misc</a></li>
               <li><a href="contact.html">Contact</a></li>
-            </ul>            
+            </ul>
           </div>
         </div>
       </nav>
@@ -89,6 +89,7 @@
             <ul>
             <li><a target="_blank" href="http://cs.stanford.edu/people/karpathy/advice.html">Doing well in your courses</a></li>
             <li><a target="_blank" href="http://nbviewer.ipython.org/github/rasbt/python_reference/blob/master/python_patterns/patterns.ipynb">A random collection of useful Python snippets</a></li>
+            <li><a target="_blank" href="http://hplgit.github.io/edu/ostasks/ostasks.html">Doing operating system tasks in Python</a></li>
             <li><a target="_blank" href="https://github.com/andreis/interview">Everything you need to kick ass on your coding interview</a></li>
             <li><a target="_blank" href="http://www.cs.ubc.ca/~murphyk/Teaching/guideForStudents.html">Guide for graduate students</a></li>
             </ul>
