updating some projects

--- a/projects.html
+++ b/projects.html
@@ -82,6 +82,18 @@
         </div>
       </nav>
 
+      <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Bee Classification using Convolutional Neural Network (CNN)</h3>
+          </div>
+          <div class="panel-body">
+            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/beenet.png" />
+            <p>I worked on this project to compete in <a href="http://www.drivendata.org/competitions/8/" target="_blank">The Metis Challenge: Naive Bees Classifier</a> competition. The goal of the competition is to  determine the genus of the bee - Apis (honey bee) or Bombus (bumble bee) based on photographs of the insects.</p>
+            <p>I implemented a Convolutional Neural Network (CNN) architecture using Theano, trained it to extract features and determine genus of the bee based on the photographs. Before training, data was preprocessed by resizing, translating, rotating and flipping every image. This additional training data helped reduce overfitting and improved the model invariance. With this architecture and preprocessing, I achieved an accuracy of 81.9% with just 25 iterations of training on CPU.</p>
+
+            <a class="btn mybtn-primary btn-xs" target="_blank" href="https://github.com/chetannaik/bee_classifier_using_cnn">Code</a>
+          </div>
+      </div>
 
       <div class="panel panel-default">
           <div class="panel-heading">
@@ -127,7 +139,7 @@
               <h3 class="panel-title">Predicting Yelp review rating stars from review text</h3>
           </div>
           <div class="panel-body">
-            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/lda_img.svg" />
+            <img class="img-responsive img-thumbnail" style='float:right;width:400px; margin-left:5px;' src="files/lda_img.png" />
             <p>The goal of this project is to predict reviews' star ratings on Yelp from review text.</p>
             <p>We have built the following models that perform text analysis on review data to predict the rating stars.</p>
             <ol>
@@ -177,6 +189,16 @@
             <a class="btn mybtn-primary btn-xs" target="_blank" href="https://github.com/chetannaik/tMood">Code</a>
             <a class="btn mybtn-primary btn-xs" target="_blank" href="https://www.youtube.com/watch?v=PlnMDUieuKc">Demo</a>
             <a class="btn mybtn-primary btn-xs" target="_blank" href="https://youtu.be/8Api3UESO1c?t=1h53m10s">Video</a>
+          </div>
+      </div>
+      <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Other Projects</h3>
+          </div>
+          <div class="panel-body">
+            <!-- <p></p> -->
+            <!-- <a class="btn mybtn-primary btn-xs" target="_blank" href="https://github.com/chetannaik/tMood">Code</a> -->
+            <a href="other_projects.html">Link to the page</a>
           </div>
       </div>
       </br>
