--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
         Email: cnaik _at_ cs.stonybrook.edu
         </br>
         </br>
-          <a href="www.linkedin.com/in/chetannagarajnaik" target="_blank">LinkedIn</a> | 
+          <a href="https://www.linkedin.com/in/chetannagarajnaik" target="_blank">LinkedIn</a> | 
           <a href="https://github.com/chetannaik"  target="_blank">GitHub</a> | 
           <a href="https://plus.google.com/+ChetanNaikN" target="_blank">Google+</a> | 
           <a href="https://www.facebook.com/chetannagarajnaik" target="_blank">Facebook</a>
