--- a/research.html
+++ b/research.html
@@ -101,7 +101,7 @@
               <a>Semantic Role Labeling for Process Recognition Questions</a> <span class="badge">2015</span><br>
               Samuel Louvan, Chetan Naik, Veronica Lynn, Ankit Arun, Niranjan Balasubramanian, and Peter Clark<br>
               <em>K-CAP Scientific Knowledge Workshop 2015.</em><br>
-              <a class="btn mybtn-primary btn-xs" target="_blank" href="http://www.isi.edu/ikcap/sciknow2015/papers/Louvan.pdf">PDF</a>  <a class="btn mybtn-primary btn-xs" target="_blank" href="files/poster.pdf">Poster</a>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="http://allenai.org/content/publications/aaai-16-aristo-final.pdf">PDF</a>  <a class="btn mybtn-primary btn-xs" target="_blank" href="files/poster.pdf">Poster</a>
           </div>
       </div>
 
