--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <div class="content">
       <p>I am a master's student in the Computer Science Engineering department at Stony Brook University, New York.</p>
         <p>I am currently working on Question Answering project with <a target="_blank" href="http://www3.cs.stonybrook.edu/~niranjan/">Prof. Niranjan Balasubramanian</a>. Before joining the graduate school, I worked for around 3 years at Google. I hold a bachelor's degree in Electronics and Communications Engineering from R.V. College of Engineering, India.</p>
+        <p><font color="#cc3300"><b>Update:</b></font> Machine Learning Scientist, <img src="files/alexa.jpg" height="25px"> (Sep 2016 onwards).</p>
         <p>My fields of interest are:</p>
         <ul>
           <li>Natural Language Processing</li>
