--- a/research.html
+++ b/research.html
@@ -34,7 +34,7 @@
 
       <div class="header">
         <div class="fac_photo" style="float: left;">
-          <img src="files/me.jpg" height="120" title="photo" id="fac_photo" class="img-circle img-me">
+            <a href="index.html"> <img src="files/me.jpg" height="120" title="photo" id="fac_photo" class="img-circle img-me"> </a>
         </div>
         <div class="fac_photo" style="height: 140px">
         <div id="headertext">
@@ -71,7 +71,7 @@
 
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-              <li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+              <li><a href="old_index.html">Home<span class="sr-only">(current)</span></a></li>
               <li><a href="courses.html">Courses</a></li>
               <li class="active"><a href="research.html">Reseach</a></li>
               <li><a href="projects.html">Projects</a></li>
@@ -88,7 +88,6 @@
           </div>
           <div class="panel-body">
             <p>As part of the <a target="_blank" href="http://allenai.org/aristo.html">AI2 Project Aristo</a>, we are developing a question answering system that can recognize instances of processes. We are designing a system that can automatically identify the key semantic roles and use them in an alignment framework to answer questions. Project involves extending state-of-the-art techniques in NLP and Machine learning.</p>
-            <p>More information will be available soon on this page.</p>
           </div>
       </div>
 
@@ -100,8 +99,15 @@
           <div class="panel-body">
               <a>Semantic Role Labeling for Process Recognition Questions</a> <span class="badge">2015</span><br>
               Samuel Louvan, Chetan Naik, Veronica Lynn, Ankit Arun, Niranjan Balasubramanian, and Peter Clark<br>
-              <em>K-CAP Scientific Knowledge Workshop 2015.</em><br>
+              <em>K-CAP Scientific Knowledge Workshop 2015.</em>
               <a class="btn mybtn-primary btn-xs" target="_blank" href="http://ai2-website.s3.amazonaws.com/publications/sciknow-2015-final.pdf">PDF</a>  <a class="btn mybtn-primary btn-xs" target="_blank" href="files/poster.pdf">Poster</a>
+              </br>
+              </br>
+              <a>Cross Sentence Inference for Process Knowledge Extraction</a> <span class="badge">2016</span><br>
+              Samuel Louvan, Chetan Naik, Heeyoung Kwon, Sadhana Kumaravel, Niranjan Balasubramanian, and Peter Clark<br>
+              <em>To appear in EMNLP 2016.</em>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="http://www.emnlp2016.net/accepted-papers.html">PDF</a>
+              </br>
           </div>
       </div>
 
