--- a/index.html
+++ b/index.html
@@ -56,46 +56,34 @@
             </div>
           </div>
         </div>
-      <!-- Static navbar -->
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <!-- <a class="navbar-brand" href="#">Brand</a> -->
-          </div>
 
-          <div class="collapse navbar-collapse" id="navbar">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
-              <li><a href="courses.html">Courses</a></li>
-              <li><a href="research.html">Reseach</a></li>
-              <li><a href="projects.html">Projects</a></li>
-              <li><a href="misc.html">Misc</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
+      <br> <br>
       <div class="content">
-      <p>I am a master's student in the Computer Science Engineering department at Stony Brook University, New York.</p>
-        <p>I am currently working on Question Answering project with <a target="_blank" href="http://www3.cs.stonybrook.edu/~niranjan/">Prof. Niranjan Balasubramanian</a>. Before joining the graduate school, I worked for around 3 years at Google. I hold a bachelor's degree in Electronics and Communications Engineering from R.V. College of Engineering, India.</p>
-        <!-- <p><font color="#cc3300"><b>Update:</b></font> Machine Learning Scientist, <img src="files/alexa.jpg" height="25px"> (Sep 2016 onwards).</p> -->
-        <p>My fields of interest are:</p>
-        <ul>
-          <li>Natural Language Processing</li>
-          <li>Machine Learning</li>
-          <li>Computer Vision</li>
-          <li>Data Science</li>
-          <li>Algorithms</li>
-        </ul>
-        <p>Here is my <a href="files/chetannaik_resume.pdf" target="_blank">CV</a>.</p>
-      </div> <!-- content -->
+      <p>Working as Machine Learning Scientist, <img src="files/alexa.jpg" height="25px"> (Sep 2016 onwards).</p>
+      <p>I completed my  MS in  Computer Science (NLP) at Stony Brook University, New York. I worked on Question Answering project with <a target="_blank" href="http://www3.cs.stonybrook.edu/~niranjan/">Prof. Niranjan Balasubramanian</a>. Before joining the graduate school, I worked for around 3 years at Google. I hold a bachelor's degree in Electronics and Communications Engineering from <a href="http://www.rvce.edu.in/">R.V. College of Engineering</a>, India.</p>
+      <!--<p><b>Update:</b> Machine Learning Scientist, Amazon Alexa (Sep 2016 onwards).</p>-->
+
+      <div class="panel panel-default">
+          <div class="panel-heading">
+              <h3 class="panel-title">Publications</h3>
+          </div>
+          <div class="panel-body">
+              <a>Cross Sentence Inference for Process Knowledge Extraction</a> <span class="badge">2016</span><br>
+              Samuel Louvan, Chetan Naik, Heeyoung Kwon, Sadhana Kumaravel, Niranjan Balasubramanian, and Peter Clark<br>
+              <em>To appear in EMNLP 2016.</em>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="http://www.emnlp2016.net/accepted-papers.html">PDF</a>
+              </br>
+              </br>
+              <a>Semantic Role Labeling for Process Recognition Questions</a> <span class="badge">2015</span><br>
+              Samuel Louvan, Chetan Naik, Veronica Lynn, Ankit Arun, Niranjan Balasubramanian, and Peter Clark<br>
+              <em>K-CAP Scientific Knowledge Workshop 2015.</em>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="http://ai2-website.s3.amazonaws.com/publications/sciknow-2015-final.pdf">PDF</a>  <a class="btn mybtn-primary btn-xs" target="_blank" href="files/poster.pdf">Poster</a>
+              </br>
+          </div>
+      </div>
+      <p><em><small>Old webpage: <a href="old_index.html">Link</a>.</small></em></p>
+
+    </div> <!-- content -->
 
     </div> <!-- /container -->
 
