--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 
       <div class="header">
         <div class="fac_photo" style="float: left;">
-          <img src="files/me.jpg" height="120" title="photo" id="fac_photo" class="img-circle img-me">
+            <a href="index.html"> <img src="files/me.jpg" height="120" title="photo" id="fac_photo" class="img-circle img-me"> </a>
         </div>
         <div class="fac_photo" style="height: 140px">
         <div id="headertext">
@@ -71,7 +71,7 @@
 
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-              <li><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+              <li><a href="old_index.html">Home<span class="sr-only">(current)</span></a></li>
               <li><a href="courses.html">Courses</a></li>
               <li><a href="research.html">Reseach</a></li>
               <li class="active"><a href="projects.html">Projects</a></li>
