--- a/old_site/index.html
+++ b/old_site/index.html
@@ -20,7 +20,7 @@
     <div id="wrapper">
       <div class="header">
         <div class="fac_photo" style="float: left;">
-          <img src="files/me.jpg" height="120" title="photo" id="fac_photo">
+          <a href="../index.html"> <img src="files/me.jpg" height="120" title="photo" id="fac_photo"></a>
         </div>
         <div class="fac_photo" style="height: 140px;">
           <h4>Chetan Naik</h4>
