--- a/old_site/index.html
+++ b/old_site/index.html
@@ -34,7 +34,7 @@
         <div class="container">
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li class="active"><a href="../index.html">Home</a></li>
               <li><a href="courses.html">Courses</a></li>
               <li><a href="research.html">Reseach</a></li>
               <li><a href="projects.html">Projects</a></li>
