--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
 
       <div class="header">
         <div class="fac_photo" style="float: left;">
-          <img src="files/me.jpg" height="120" title="photo" id="fac_photo" class="img-circle img-me">
+          <img src="files/me.jpg" height="80" title="photo" id="fac_photo" class="img-circle img-me">
         </div>
         <div class="fac_photo" style="height: 140px">
         <div id="headertext">
           <div id="htname">Chetan Naik</div>
-          <div id="htdesc">Graduate Student at Stony Brook University</div>
-          <div id="htem">cnaik _at_ cs.stonybrook.edu</div>
+          <!--<div id="htdesc">Graduate Student at Stony Brook University</div>-->
+          <!--<div id="htem">cnaik _at_ cs.stonybrook.edu</div>-->
           <div id="icons">
             <div class="svgico">
-              <a href="http://www.linkedin.com/in/chetannagarajnaik" target="_blank"><img src="files/linkedin.png" height="26px"></a>
+              <a href="http://www.linkedin.com/in/chetannagarajnaik" target="_blank"><img src="files/linkedin.png" height="22px"></a>
             </div>
             <div class="svgico">
-              <a href="https://github.com/chetannaik" target="_blank"><img src="files/git.png" height="26px"></a>
+              <a href="https://github.com/chetannaik" target="_blank"><img src="files/git.png" height="22px"></a>
             </div>
             <div class="svgico">
-              <a href="https://plus.google.com/+ChetanNaikN/posts" target="_blank"><img src="files/gplus.png" height="26px"></a>
+              <a href="https://plus.google.com/+ChetanNaikN/posts" target="_blank"><img src="files/gplus.png" height="22px"></a>
             </div>
             <div class="svgico">
-              <a href="https://twitter.com/chetannnaik" target="_blank"><img src="files/twitter.png" height="26px"></a>
+              <a href="https://twitter.com/chetannnaik" target="_blank"><img src="files/twitter.png" height="22px"></a>
             </div>
           </div>
         </div>
