--- a/index.html
+++ b/index.html
@@ -60,14 +60,19 @@
       <br> <br>
       <div class="content">
       <p>Working as Machine Learning Scientist, <img src="files/alexa.jpg" height="25px"> (Sep 2016 onwards).</p>
-      <p>I completed my  MS in  Computer Science (NLP) at Stony Brook University, New York. I worked on Question Answering project with <a target="_blank" href="http://www3.cs.stonybrook.edu/~niranjan/">Prof. Niranjan Balasubramanian</a>. Before joining the graduate school, I worked for around 3 years at Google. I hold a bachelor's degree in Electronics and Communications Engineering from <a href="http://www.rvce.edu.in/">R.V. College of Engineering</a>, India.</p>
+      <p>I completed my  MS in  Computer Science (NLP) at Stony Brook University, New York. I worked on Question Answering research with <a target="_blank" href="http://www3.cs.stonybrook.edu/~niranjan/">Prof. Niranjan Balasubramanian</a>. Before joining the graduate school, I worked for around 3 years at Google. I hold a bachelor's degree in Electronics and Communications Engineering from <a href="http://www.rvce.edu.in/">R.V. College of Engineering</a>, India.</p>
       <!--<p><b>Update:</b> Machine Learning Scientist, Amazon Alexa (Sep 2016 onwards).</p>-->
 
       <div class="panel panel-default">
           <div class="panel-heading">
               <h3 class="panel-title">Publications</h3>
           </div>
-          <div class="panel-body">
+          <div class="panel-body">            
+              <a>An Exploratory Study on Process Representations</a> <span class="badge">2016</span><br>
+              Chetan Naik<br>
+              <em>M.S. thesis, Stony Brook University</em>
+              </br>
+              </br>
               <a>Cross Sentence Inference for Process Knowledge Extraction</a> <span class="badge">2016</span><br>
               Samuel Louvan, Chetan Naik, Heeyoung Kwon, Sadhana Kumaravel, Niranjan Balasubramanian, and Peter Clark<br>
               <em>To appear in EMNLP 2016.</em>
