--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </br>
               <a>Cross Sentence Inference for Process Knowledge</a> <span class="badge">2016</span><br>
               Samuel Louvan, Chetan Naik, Heeyoung Kwon, Sadhana Kumaravel, Niranjan Balasubramanian, and Peter Clark<br>
-              <em>To appear in EMNLP 2016.</em>
+              <em>EMNLP 2016.</em>
               <a class="btn mybtn-primary btn-xs" target="_blank" href="http://ai2-website.s3.amazonaws.com/publications/spock_emnlp.pdf">PDF</a>
               <!--<a class="btn mybtn-primary btn-xs" target="_blank" href="files/collective_inference/index.html">Slides</a>-->
               </br>
