Adding the 2018 publications.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <br> <br>
       <div class="content">
-      <p>Working as Machine Learning Scientist, <img src="files/alexa.jpg" height="25px"> (Sep 2016 onwards).</p>
+      <p>Working as Machine Learning Scientist, <img src="files/alexa.jpg" height="25px">.</p>
       <p>I completed my  MS in  Computer Science (NLP) at Stony Brook University, New York. I worked on Question Answering research with <a target="_blank" href="http://www3.cs.stonybrook.edu/~niranjan/">Prof. Niranjan Balasubramanian</a>. Before joining the graduate school, I worked for around 3 years at Google. I hold a bachelor's degree in Electronics and Communications Engineering from <a href="http://www.rvce.edu.in/">R.V. College of Engineering</a>, India.</p>
       <!--<p><b>Update:</b> Machine Learning Scientist, Amazon Alexa (Sep 2016 onwards).</p>-->
 
@@ -67,21 +67,33 @@
           <div class="panel-heading">
               <h3 class="panel-title">Publications</h3>
           </div>
-          <div class="panel-body">            
+          <div class="panel-body">
+              <a>Cross-Lingual Approaches to Reference Resolution in Dialogue Systems</a> <span class="badge">2018</span><br>
+              Amr Sharaf, Arpit Gupta, Hancheng Ge, <b>Chetan Naik</b>, Lambert Mathias<br>
+              <em>NIPS 2018, Conversational AI Workshop</em>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="https://arxiv.org/pdf/1811.11161.pdf">PDF</a>
+              </br>
+              </br>
+              <a>Contextual Slot Carryover for Disparate Schemas</a> <span class="badge">2018</span><br>
+              <b>Chetan Naik</b>, Arpit Gupta, Hancheng Ge, Lambert Mathias, Ruhi Sarikaya<br>
+              <em>Interspeech 2018</em>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="https://arxiv.org/pdf/1806.01773.pdf">PDF</a>
+              </br>
+              </br>
               <a>An Exploratory Study on Process Representations</a> <span class="badge">2016</span><br>
-              Chetan Naik<br>
+              <b>Chetan Naik</b><br>
               <em>M.S. thesis, Stony Brook University</em>
               </br>
               </br>
               <a>Cross Sentence Inference for Process Knowledge</a> <span class="badge">2016</span><br>
-              Samuel Louvan, Chetan Naik, Heeyoung Kwon, Sadhana Kumaravel, Niranjan Balasubramanian, and Peter Clark<br>
+              Samuel Louvan, <b>Chetan Naik</b>, Heeyoung Kwon, Sadhana Kumaravel, Niranjan Balasubramanian, and Peter Clark<br>
               <em>EMNLP 2016.</em>
               <a class="btn mybtn-primary btn-xs" target="_blank" href="http://ai2-website.s3.amazonaws.com/publications/spock_emnlp.pdf">PDF</a>
               <!--<a class="btn mybtn-primary btn-xs" target="_blank" href="files/collective_inference/index.html">Slides</a>-->
               </br>
               </br>
               <a>Semantic Role Labeling for Process Recognition Questions</a> <span class="badge">2015</span><br>
-              Samuel Louvan, Chetan Naik, Veronica Lynn, Ankit Arun, Niranjan Balasubramanian, and Peter Clark<br>
+              Samuel Louvan, <b>Chetan Naik</b>, Veronica Lynn, Ankit Arun, Niranjan Balasubramanian, and Peter Clark<br>
               <em>K-CAP Scientific Knowledge Workshop 2015.</em>
               <a class="btn mybtn-primary btn-xs" target="_blank" href="http://ai2-website.s3.amazonaws.com/publications/sciknow-2015-final.pdf">PDF</a>
               <a class="btn mybtn-primary btn-xs" target="_blank" href="files/poster.pdf">Poster</a>
@@ -89,28 +101,28 @@
           </div>
       </div>
 
-      <div class="panel panel-default">
-          <div class="panel-heading">
-              <h3 class="panel-title">Miscellaneous</h3>
-          </div>
-          <div class="panel-body">
-              <!--<a>Cross-Sentence Inference [Summary]</a> -->
-              <!--<a class="btn mybtn-primary btn-xs" target="_blank" href="files/collective_inference/index.html">Slides</a>-->
-              <!--<br>-->
-              <a>Memory Networks [Summary]</a> 
-              <a class="btn mybtn-primary btn-xs" target="_blank" href="files/memory_networks/index.html">Slides</a>
-              <br>
-              <a>Neural Machine Translation [Summary]</a> 
-              <a class="btn mybtn-primary btn-xs" target="_blank" href="https://docs.google.com/presentation/d/1sPXBOjIv5eezd3W86Ep0MZKTpDd3-92thqlvrIwFPpI/pub">Slides</a>
-              <br>
-              <a>Backpropagation [Summary]</a> 
-              <a class="btn mybtn-primary btn-xs" target="_blank" href="https://docs.google.com/presentation/d/1DhqLXPsrY5GU0xBEpxEeKQC_mCjRobBUYsa411Qx0wk/pub">Slides</a>
-              <br>
-              <a>Skip-Gram [Summary]</a> 
-              <a class="btn mybtn-primary btn-xs" target="_blank" href="https://docs.google.com/presentation/d/1D6GKUaI-IjXbuIYA7U50thfveskMdxObM1cZ0rZ_BA0/pub">Slides</a>
-              <br>
-          </div>
-      </div>
+      <!-- <div class="panel panel-default"> -->
+      <!-- <div class="panel-heading"> -->
+      <!-- <h3 class="panel-title">Miscellaneous</h3> -->
+      <!-- </div> -->
+      <!-- <div class="panel-body"> -->
+      <!-- <a>Cross-Sentence Inference [Summary]</a> -->
+      <!-- <a class="btn mybtn-primary btn-xs" target="_blank" href="files/collective_inference/index.html">Slides</a> -->
+      <!-- <br> -->
+      <!-- <a>Memory Networks [Summary]</a>  -->
+      <!-- <a class="btn mybtn-primary btn-xs" target="_blank" href="files/memory_networks/index.html">Slides</a> -->
+      <!-- <br> -->
+      <!-- <a>Neural Machine Translation [Summary]</a>  -->
+      <!-- <a class="btn mybtn-primary btn-xs" target="_blank" href="https://docs.google.com/presentation/d/1sPXBOjIv5eezd3W86Ep0MZKTpDd3-92thqlvrIwFPpI/pub">Slides</a> -->
+      <!-- <br> -->
+      <!-- <a>Backpropagation [Summary]</a>  -->
+      <!-- <a class="btn mybtn-primary btn-xs" target="_blank" href="https://docs.google.com/presentation/d/1DhqLXPsrY5GU0xBEpxEeKQC_mCjRobBUYsa411Qx0wk/pub">Slides</a> -->
+      <!-- <br> -->
+      <!-- <a>Skip-Gram [Summary]</a>  -->
+      <!-- <a class="btn mybtn-primary btn-xs" target="_blank" href="https://docs.google.com/presentation/d/1D6GKUaI-IjXbuIYA7U50thfveskMdxObM1cZ0rZ_BA0/pub">Slides</a> -->
+      <!-- <br> -->
+      <!-- </div> -->
+      <!-- </div> -->
       <p><em><small>Old webpage: <a href="old_index.html">Link</a>.</small></em></p>
 
     </div> <!-- content -->
