Adding pncc work

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
               <h3 class="panel-title">Publications</h3>
           </div>
           <div class="panel-body">
+              <a>Improving Long Distance Slot Carryover in Spoken Dialogue Systems</a> <span class="badge">2019</span><br>
+              Tongfei Chen, <b>Chetan Naik</b>, Hua He, Pushpendre Rastogi, Lambert Mathias<br>
+              <em>NLP4ConvAI@ACL 2019</em>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="https://arxiv.org/pdf/1906.01149.pdf">PDF</a>
+              </br>
+              </br>
               <a>Cross-Lingual Approaches to Reference Resolution in Dialogue Systems</a> <span class="badge">2018</span><br>
               Amr Sharaf, Arpit Gupta, Hancheng Ge, <b>Chetan Naik</b>, Lambert Mathias<br>
               <em>NIPS 2018, Conversational AI Workshop</em>
@@ -83,6 +89,7 @@
               <a>An Exploratory Study on Process Representations</a> <span class="badge">2016</span><br>
               <b>Chetan Naik</b><br>
               <em>M.S. thesis, Stony Brook University</em>
+              <a class="btn mybtn-primary btn-xs" target="_blank" href="https://ir.stonybrook.edu/xmlui/bitstream/handle/11401/77242/Naik_grad.sunysb_0771M_13011.pdf">PDF</a>
               </br>
               </br>
               <a>Cross Sentence Inference for Process Knowledge</a> <span class="badge">2016</span><br>
